--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ input[type=text]:focus {
     border-color:#333;
 }
 
-.footerButton{
+.centralizedItems{
     text-align: center;
     padding: 5px;
 }
